shim/third-party/rust/vendor/ref-cast-1.0.9/tests/ui/repr-align.stderr
error: aligned repr on struct that implements RefCast is not supported
 --> tests/ui/repr-align.rs:4:8
  |
4 | #[repr(align(2), C, align = "2")]
  |        ^^^^^^^^

error: aligned repr on struct that implements RefCast is not supported
 --> tests/ui/repr-align.rs:4:21
  |
4 | #[repr(align(2), C, align = "2")]
  |                     ^^^^^^^^^^^

error[E0693]: incorrect `repr(align)` attribute format
 --> tests/ui/repr-align.rs:4:21
  |
4 | #[repr(align(2), C, align = "2")]
  |                     ^^^^^^^^^^^ help: use parentheses instead: `align(2)`
