shim/third-party/rust/vendor/ref-cast-1.0.9/tests/ui/repr-align.rs
use ref_cast::RefCast;

#[derive(RefCast)]
#[repr(align(2), C, align = "2")]
struct Test {
    s: String,
}

fn main() {}
